# Hephaestus

./: .claude-address-review-1422.md  .claude-address-review-1435.md  .claude-address-review-1580.md  .claude-address-review-819.md  .claude-followup-1816.json  .claude-pr-review-1360.md  .claude-pr-review-1422.md  .codexignore  .fleet.yml  .gitignore  .heph-project-denylist  .markdownlint.yaml  .pip-audit-ignore.txt  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  LEARNINGS_ISSUE_768.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  justfile  pixi.toml  pyproject.toml  renovate.json
.claude/: settings.json
.claude/security/: guidelines.md
.claude/workflows/: development.md
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  _required.yml  auto-label-severity.yml  auto-tag.yml  contract.yml  hol-plugin-scanner.yml  merge-queue-smoke.yml  performance.yml  pre-commit.yml  release.yml  security.yml  strict-review-proof.yml  test.yml
docs/: AUTOMATION_LOOP_ARCHITECTURE.md  DEFINITION_OF_DONE.md  MIGRATION.md  RELEASING.md  ROADMAP.md  TECH_DEBT.md  architecture.md  auto-label-needs-plan.md  contract-testing.md  contributing.md  documentation-maintenance.md  index.md  mcp.md  nats.md  observability.md  performance-testing.md  pi-private-provider.md  plugin-installation.md  third-party-services.md
docs/adr/: 0001-automation-library-boundary.md  0003-dependabot-renovate-split.md  0003-retired-dependency-manager-policy.md  0004-single-aggregator-required-checks.md  0005-multi-agent-runtime-abstraction.md  0006-queue-based-in-process-automation-pipeline.md  0007-dual-surface-required-checks.md  0008-strict-review-merge-gate.md  0008-uv-only-development-environment.md  0009-head-bound-strict-review-merge-gate.md  0009-retired-external-approval-policy.md  0010-retired-external-proof-policy.md  0010-trusted-strict-review-proof.md  0011-loop-owned-pr-review-approval.md  0011-mcp-integration-posture.md  0012-loop-owned-pr-review-approval.md  0013-backup-and-disaster-recovery-policy.md  0014-agent-contract-canonical-location.md  0014-fixture-based-workflow-validator-tests.md  README.md
docs/ci/: required-checks.md
docs/release-notes/: README.md
docs/runbooks/: automation-loop-crash.md  backup-restore.md  ci-driver-stall.md  claude-quota-exhausted.md  corrupted-worktree.md  index.md  state-skip-revival.md
docs/specs/: 2026-07-16-jinja-prompt-templates-design.md
hephaestus/: __init__.py  constants.py
hephaestus/agents/: frontmatter.py  loader.py  runtime.py
hephaestus/automation/: __init__.py  _followup_phase.py  _implement_phase.py  _plan_phase.py  _pr_create_phase.py  _review_conflict_resolver.py  _review_loop.py  _review_phase.py  _review_utils.py  _reviewer_base.py  _stage_context.py  address_review.py  address_review_core.py  advise_runner.py  agent_config.py  agent_stage.py  arming_state.py  audit_reviewer.py  auto_merge_coordinator.py  ci_check_inspector.py  ci_driver.py  ci_fix_flow.py  ci_fix_orchestrator.py  ci_run_coordinator.py  claude_invoke.py  claude_models.py  claude_timeouts.py  codex_stage.py  commit_policy.py  dependency_resolver.py  drive_green_state.py  ensure_state_labels.py  follow_up.py  git_utils.py  github_api.py  implementer.py  implementer_cli.py  implementer_phase_runner.py  implementer_summary.py  learn.py  (+29 more)
hephaestus/benchmarks/: __init__.py
hephaestus/ci/: __init__.py  bandit_baseline_check.py  bandit_low_baseline.json  precommit.py  release_rollback.py  required_checks_gate.py  workflows.py
hephaestus/cli/: utils.py
hephaestus/config/: __init__.py  dep_sync.py  env.py  paths.py  pixi.py  utils.py
hephaestus/datasets/: __init__.py  downloader.py
hephaestus/discovery/: __init__.py  blocks.py
hephaestus/forensics/: __init__.py  coredump_handler.py  gdb_runner.py
hephaestus/github/: __init__.py  auto_merge.py  client.py  fleet_sync.py  git_ops.py  mnemosyne_repo.py  pr_merge.py  rate_limit.py  stats.py  tidy.py
hephaestus/io/: toml.py  utils.py
hephaestus/logging/: formatters.py  utils.py
hephaestus/markdown/: __init__.py  anchors.py  fixer.py
hephaestus/nats/: __init__.py  config.py  subscriber.py
hephaestus/observability/: __init__.py  alerts.py  metrics.py  server.py
hephaestus/prompts/: __init__.py  catalog.py
hephaestus/resilience/: __init__.py  circuit_breaker.py  subprocess_resilience.py
hephaestus/scripts_lib/: check_cli_table_sync.py  check_python_version_consistency.py  check_version_single_source.py  scaffold_subpackage.py
hephaestus/system/: __init__.py  info.py
hephaestus/utils/: __init__.py  cache.py  file_lock.py  git.py  helpers.py  retry.py  terminal.py
hephaestus/validation/: __init__.py  api_reference.py  api_table_docs.py  audit.py  cli_tier_docs.py  coverage.py  doc_config.py  doc_maintenance.py  doc_policy.py  markdown.py  mypy_per_file.py  python_version.py  readme_commands.py  repo_analyze_skills.py  skill_catalog.py  skill_merge_method.py  test_structure.py  tier_labels.py  unlinked_todo.py
hephaestus/version/: __init__.py  consistency.py  manager.py  parsing.py
scripts/: README.md  backup_state.py  check_build_dir_untracked.py  check_conventional_commit.py  check_dco_signoff.py  check_private_denylist.py  check_security_policy_no_hardcoded_date.py  check_security_version_consistency.py  choose_merge_flag.sh  demo_cli.py  example_usage.py  release_rollback.py  run_automation_loop.sh  show_prompt.py
scripts/shell/: drive_prs_green_ecosystem.sh  install.sh  install_hooks.sh  run-under-gdb.sh
skills/automation-pr-severity-aware-gate-implementation/: SKILL.md
skills/learn/: SKILL.md
skills/myrmidon-swarm/: SKILL.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_choose_merge_flag_sh.py  test_cli_entry_points.py  test_generic_secret_hook.py  test_gh_trace_id_propagation.py  test_orchestration_smoke.py  test_package_import.py  test_pr_manager_commit_integration.py  (+4 more)
(+414 files in other folders)
